added the top 5 airline api and fixed bugs
