# server/routes/aircraft.js
@@ -5,6 +5,7 @@ import {
 	editAircraft,
 	fetchAircrafts,
 	fetchAllAircrafts,
+	fetchTopFiveAirline,
 } from '../controllers/aircraft.js';
 
 const router = express.Router();
@@ -13,5 +14,6 @@ router.post('/add', userAuth, addAircraft);
 router.patch('/edit', userAuth, editAircraft);
 router.get('/', userAuth, fetchAircrafts);
 router.get('/all', userAuth, fetchAllAircrafts);
+router.get('/top-5-airline', userAuth, fetchTopFiveAirline);
 
 export default router;
